8218593: Symbol leak in prepend_host_package_name

Add appropriate refcounting for Symbols stomped by parsing

Reviewed-by: hseigel, zgu